# sonar-tantivy

./: .gitignore  .travis.yml  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  node-stream.js  package-lock.json  package.json  sonar-demo.sh
.github/workflows/: build.yml
ci/: before_deploy.ps1  before_deploy.sh
docs/: archipel-sonar.md  plan.md
examples/: _fixtures.js  simple.js
node/: .gitignore  _doc.js  catalog.js  demo.js  fixtures.js  index.js  node-stream.js  package.json  replicate.js  rpc.js
scripts/: install.js
src/: .nicetohave.rs  handles.rs  index.rs  main.rs  rpc.rs
src-nodejs/: catalog.js  index.js  rpc.js
src-rust/: handles.rs  index.rs  main.rs  query.rs  rpc.rs  search.rs
test/: basic.js  segments.js
test/lib/: fixtures.js  util.js
test/testindex1/: .managed.json  meta.json
test/testindex2/: meta.json
