[package]
name = "sonar-tantivy"
version = "0.2.14"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
repository = "https://github.com/arso-project/sonar-tantivy"

[[bin]]
name = "sonar-tantivy"
path = "src-rust/main.rs"

[dependencies]
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde = { version = "^1.0", features = ["derive"] }
log = "^0.4"
uuid = "^0.7"
failure = "^0.1"
varinteger = "^1.0"
once_cell = "^0.2"

toshi-types = { git = "https://github.com/arso-project/Toshi.git", branch = "tantivy018" }
tantivy = "^0.18"

[dev-dependencies]
tempdir = "^0.3"
