[package]
name = "sonar-tantivy"
version = "0.3.2"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
repository = "https://github.com/arso-project/sonar-tantivy"

[[bin]]
name = "sonar-tantivy"
path = "src-rust/main.rs"

[dependencies]
serde_json = { version = "^1", features = ["preserve_order"] }
serde = { version = "^1", features = ["derive"] }
log = "^0.4"
varinteger = "^1"
once_cell = "^1.0.1"
toshi-types = { git = "https://github.com/arso-project/Toshi.git", branch = "tantivy018" }
tantivy = "^0.18"
anyhow = "^1"

[dev-dependencies]
tempdir = "^0.3"
